# DeteccionDeSarcasmo

./: .gitignore  README.md  explo.md  exploracion.md  irosva.md  modelos.md  ortega.md  prepro.md  pyproject.toml  requirements.txt
data/: irosva.cu - irosva.cu.test.csv  irosva.cu.test.truth.csv  irosva.cu.training.csv  irosva.es - irosva.es.test.csv  irosva.es.test.truth.csv  irosva.es.training.csv  irosva.mx - irosva.mx.test.csv  irosva.mx.test.truth.csv  irosva.mx.training.clean.csv  irosva.mx.training.csv
notebooks/: 00_exploracion.ipynb  00_exploracion.md  01_preprocesamiento.ipynb  01_preprocesamiento.md  02_ml_lr_rf.ipynb  02_ml_modelos.ipynb  02_ml_modelos.md  03_ml_voting.ipynb  03_ml_voting_1.ipynb  entrenamiento.ipynb  explo.ipynb  exploracion.ipynb  modelos.ipynb  modelos.md  prepro.ipynb  preproc.md  preprocesamiento.ipynb
