[project]
name = "deteccion-de-sarcasmo"
version = "0.1.0"
description = "Notebooks para deteccion de sarcasmo en texto en espanol."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "emoji>=2.15.0",
    "gensim>=4.3.3,<4.4",
    "ipykernel>=6.29.0",
    "joblib>=1.4.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "nltk>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0,<1.14",
    "seaborn>=0.13.0",
    "spacy>=3.7.0,<3.8",
    "tqdm>=4.66.0",
    "es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0-py3-none-any.whl",
]

[tool.uv]
package = false
